--- a/public/styles/css/master/global.css
+++ b/public/styles/css/master/global.css
@@ -295,7 +295,7 @@ a {
   margin: 0 auto;
   box-sizing: border-box;
   display: table;
-  width: 1366px;
+  width: 1280px;
 }
 
 .container-fluid {
@@ -374,7 +374,7 @@ a {
   font-style: normal;
 }
 
-.i-navigation-section .i-nav-wrapper > ul li a, .i-navigation-section .i-nav-wrapper > ul li ul li a, .full-screen-block h1, .full-screen-block h4, .full-screen-block .form-group .form-input input, .list-places-wrapper .list-places-block .individual-place-block p {
+.i-navigation-section .i-nav-wrapper > ul li a, .i-navigation-section .i-nav-wrapper > ul li ul li a, .full-screen-block h1, .full-screen-block h4, .full-screen-block .form-group .form-input input, .login-section-wrapper .screen-logo-section p, .login-section-wrapper .login-title {
   font-family: "Ubuntu";
   font-weight: 300;
   font-style: normal;
@@ -392,7 +392,7 @@ a {
   font-style: normal;
 }
 
-body, .i-navigation-section .i-nav-wrapper > ul li a, .explore-places-block h4, .explore-places-block p, .explore-places-block figcaption p {
+body, .i-navigation-section .i-nav-wrapper > ul li a, .list-places-wrapper .list-places-block .individual-place-block .place-image-block span, .explore-places-block h4, .explore-places-block p, .explore-places-block figcaption p {
   font-family: "Ubuntu";
   font-weight: 400;
   font-style: normal;
@@ -428,7 +428,7 @@ body, .i-navigation-section .i-nav-wrapper > ul li a, .explore-places-block h4, 
   font-style: normal;
 }
 
-.explore-places-block figcaption h2 {
+.list-places-wrapper .list-places-block .individual-place-block p, .explore-places-block figcaption h2 {
   font-family: "Ubuntu";
   font-weight: 600;
   font-style: normal;
@@ -446,7 +446,7 @@ body, .i-navigation-section .i-nav-wrapper > ul li a, .explore-places-block h4, 
   font-style: normal;
 }
 
-.list-places-wrapper .list-places-block .individual-place-block .place-image-block span, .list-places-wrapper .list-places-block .individual-place-block h4, .filter-nav ul li p {
+.list-places-wrapper .list-places-block .individual-place-block h4, .filter-nav ul li p {
   font-family: "Ubuntu";
   font-weight: 700;
   font-style: normal;
@@ -1913,6 +1913,12 @@ nav {
   height: auto;
 }
 
+.listPlaces .full-screen-wrapper {
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
 .listPlaces .btn, .listPlaces .i-navigation-section .i-nav-wrapper > ul > li:last-child a, .i-navigation-section .i-nav-wrapper > ul > li:last-child .listPlaces a, .listPlaces .full-screen-block .form-group .form-button button, .full-screen-block .form-group .form-button .listPlaces button {
   background-color: transparent;
   border: 2px solid #E74949;
@@ -1921,7 +1927,8 @@ nav {
 }
 
 .listPlaces #map {
-  display: none;
+  height: 0 !important;
+  opacity: 0;
 }
 
 .full-screen-block {
@@ -2001,19 +2008,25 @@ nav {
 }
 
 .list-places-wrapper {
-  background-color: #fcfcfd;
+  background-color: #ffffff;
+  position: relative;
+  z-index: 100;
+}
+
+.list-places-wrapper .masonry {
+  /* Masonry container */
+  column-count: 4;
+  column-gap: 1em;
+}
+
+.list-places-wrapper .item {
+  /* Masonry bricks or child elements */
+  display: inline-block;
+  width: 100%;
 }
 
 .list-places-wrapper .list-places-block .individual-place-block {
-  width: -webkit-calc(25%);
-  width: -moz-calc(25%);
-  width: calc(25%);
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-left: 0%;
-  margin-right: 0%;
-  margin-top: 25px;
+  margin-bottom: 12px;
   font-family: 'Montserrat';
 }
 
@@ -2022,15 +2035,15 @@ nav {
 }
 
 .list-places-wrapper .list-places-block .individual-place-block .individual-place-block-wrapper {
-  background-color: #ffffff;
+  background-color: #f5f5f5;
   box-shadow: 3px 3px 3px rgba(204, 204, 204, 0.1);
-  padding-bottom: 8px;
+  border: 1px solid #f3f3f3;
 }
 
 .list-places-wrapper .list-places-block .individual-place-block .place-image-block {
   position: relative;
-  max-height: 185px;
-  min-height: 185px;
+  max-height: 22px;
+  min-height: 200px;
   overflow: hidden;
 }
 
@@ -2039,62 +2052,96 @@ nav {
   right: 6px;
   top: 8px;
   font-size: 11px;
-  color: #ffffff;
+  color: #131313;
   line-height: initial;
   letter-spacing: 1px;
   margin-bottom: 0px;
   margin-top: 0px;
-  background-color: #E74949;
+  background-color: rgba(255, 255, 255, 0.72);
   padding: 3px 8px;
+  z-index: 10;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.list-places-wrapper .list-places-block .individual-place-block .place-image-block .img-photo {
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
 }
 
 .list-places-wrapper .list-places-block .individual-place-block .place-content-block {
   position: relative;
 }
 
-.list-places-wrapper .list-places-block .individual-place-block .place-content-block a {
+.list-places-wrapper .list-places-block .individual-place-block .place-content-block .curve {
+  width: 100%;
   position: absolute;
+  bottom: 95%;
+}
+
+.list-places-wrapper .list-places-block .individual-place-block .place-content-block .rating-icon {
+  display: table;
+  margin: 0 auto 25px;
+  text-align: center;
+}
+
+.list-places-wrapper .list-places-block .individual-place-block .place-content-block .rating-icon i {
+  padding: 0 3px;
+  color: #E74949;
+}
+
+.list-places-wrapper .list-places-block .individual-place-block .place-content-block a {
   font-size: 14px;
   letter-spacing: initial;
-  font-family: 'raleway';
-  float: right;
   display: block;
-  right: 10px;
-  bottom: 10px;
-  padding: 6px 10px;
-  border-radius: 2px;
+  padding: 12px 10px;
   background-color: #e74949;
   color: #fff;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-family: "Montserrat";
 }
 
 .list-places-wrapper .list-places-block .individual-place-block h4 {
-  padding-top: 8px;
-  font-size: 16px;
-  color: #2b2f3a;
+  padding-top: 25px;
+  font-size: 20px;
+  color: #515151;
   line-height: initial;
   letter-spacing: initial;
   margin-bottom: 0px;
   margin-top: 0px;
   padding-left: 8px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
   min-height: 27px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat";
 }
 
 .list-places-wrapper .list-places-block .individual-place-block p {
-  padding-top: 4px;
-  font-size: 13px;
-  color: #343638;
+  padding-top: 10px;
+  font-size: 14px;
+  color: #989898;
   line-height: initial;
-  letter-spacing: initial;
+  letter-spacing: 1px;
   margin-bottom: 0px;
   margin-top: 0px;
+  text-transform: uppercase;
   padding-left: 8px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   min-height: 19px;
+  text-align: center;
+  padding-bottom: 22px;
 }
 
 .filter-nav {
@@ -2305,4 +2352,291 @@ nav {
 
 .explore-places-block figcaption p:after {
   display: none;
+}
+
+/*********************************
+            Login Modal
+*********************************/
+.login-section-wrapper .screen-logo-section {
+  background-color: #E74949;
+  color: #fff;
+}
+
+.login-section-wrapper .layout-half {
+  width: -webkit-calc(50%);
+  width: -moz-calc(50%);
+  width: calc(50%);
+  float: left;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-left: 0%;
+  margin-right: 0%;
+}
+
+.login-section-wrapper .sign-screen {
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 52%;
+  height: auto;
+  display: table;
+  background-color: #292c3d;
+}
+
+.login-section-wrapper .screen-logo-section {
+  padding: 60px 10px 20px;
+}
+
+.login-section-wrapper .sign-screen .col-sm-6 {
+  padding: 0px;
+}
+
+.login-section-wrapper .screen-logo-section img {
+  display: block;
+  margin: 0 auto;
+  width: 30px;
+}
+
+.login-section-wrapper .screen-logo-section h2 {
+  text-align: center;
+  font-size: 18px;
+  margin-top: 10px;
+  letter-spacing: 1px;
+}
+
+.login-section-wrapper .screen-title-section {
+  padding: 180px 15px;
+}
+
+.login-section-wrapper .screen-title-section h1 {
+  text-align: right;
+  padding-left: 20%;
+  font-weight: 100;
+  font-size: 36px;
+}
+
+.login-section-wrapper .screen-logo-section p {
+  text-align: right;
+  margin-bottom: 0px;
+  font-size: 16px;
+  color: #ffffff;
+  line-height: 21px;
+  letter-spacing: 1px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.login-section-wrapper .sing-screen-wrapper {
+  background-color: #292c3d;
+}
+
+.login-section-wrapper .sign-screen .panel {
+  border: none;
+  background-color: #292c3d;
+  border-color: transparent;
+  box-shadow: none;
+}
+
+.login-section-wrapper .sign-screen .panel-body {
+  padding: 80px 0px 0px;
+}
+
+.login-section-wrapper .login-title {
+  padding-bottom: 100px;
+  padding-left: 15px;
+  font-size: 32px;
+  color: #ffffff;
+  line-height: initial;
+  letter-spacing: 1px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.login-section-wrapper .sign-screen .form-group .col-md-12 {
+  padding: 0px;
+}
+
+.login-section-wrapper .sign-screen .form-group input {
+  border-radius: 0px;
+  background-color: #2b3043;
+  border-left: transparent;
+  border-right: transparent;
+  color: #fff;
+  border: 1px solid rgba(243, 243, 243, 0.18);
+  transition: none;
+  height: 45px;
+  padding: 0px 15px;
+  width: 75%;
+}
+
+.login-section-wrapper input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #2b3043 inset;
+  color: #fff;
+}
+
+.login-section-wrapper .sign-button {
+  background: transparent;
+  color: #E74949;
+  border: 1px solid #E74949;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  padding: 10px 50px;
+}
+
+.login-section-wrapper .sign-button:hover, .login-section-wrapper .sign-button:active, .login-section-wrapper .sign-button:focus {
+  color: #E74949;
+}
+
+.login-section-wrapper .form-group {
+  margin-bottom: 25px;
+}
+
+.login-section-wrapper .text-white {
+  color: #fff;
+  opacity: 0.5;
+  font-family: 'Roboto', sans-serif;
+}
+
+.login-section-wrapper input:-webkit-autofill {
+  background-color: #2b3043 !important;
+  border: 1px solid rgba(243, 243, 243, 0.18) !important;
+}
+
+.login-section-wrapper .loginwith {
+  display: block;
+  margin-bottom: 40px;
+  font-size: 28px;
+  color: #FFF;
+  text-align: center;
+}
+
+.login-section-wrapper button.social-signin {
+  margin-bottom: 20px;
+  width: 220px;
+  height: 36px;
+  border: none;
+  border-radius: 2px;
+  color: #FFF;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+
+.login-section-wrapper button.social-signin:hover,
+.login-section-wrapper button.social-signin:focus {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  transition: 0.2s ease;
+}
+
+.login-section-wrapper button.social-signin:active {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+  transition: 0.2s ease;
+}
+
+.login-section-wrapper button.social-signin.facebook {
+  background: #32508E;
+}
+
+.login-section-wrapper button.social-signin.twitter {
+  background: #55ACEE;
+}
+
+.login-section-wrapper button.social-signin.google {
+  background: #DD4B39;
+}
+
+.login-section-wrapper .mt-75 {
+  margin-top: 75px;
+}
+
+/*********************************
+    nG Dialog
+*********************************/
+.ngdialog.ngdialog-theme-plain .ngdialog-close:before {
+  content: url("../../../images/close-modal.png");
+}
+
+.ngdialog-content {
+  max-width: 800px;
+  /*box-shadow: 0 0 20px rgba(0, 0, 0, 0.10);
+    z-index: 1000;
+    position: fixed;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    display: block;
+    float: none;*/
+}
+
+.ngdialog-overlay {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+/*********************************
+        Masonry Responsive
+*********************************/
+.masonry {
+  margin: 1.5em 0;
+  padding: 0;
+  -moz-column-gap: 1.5em;
+  -webkit-column-gap: 1.5em;
+  column-gap: 1.5em;
+  font-size: .85em;
+}
+
+.item {
+  display: inline-block;
+  background: #fff;
+  /*padding: 1em;*/
+  /*margin: 0 0 1.5em;*/
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+@media only screen and (min-width: 400px) {
+  .masonry {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .masonry {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .masonry {
+    -moz-column-count: 4;
+    -webkit-column-count: 4;
+    column-count: 4;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .masonry {
+    -moz-column-count: 5;
+    -webkit-column-count: 5;
+    column-count: 5;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .wrapper {
+    width: 1260px;
+  }
 }
