--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,10 @@
         <title>Roadtripo</title>
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
         <link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" media="screen" title="no title">
+        <link rel="stylesheet" type="text/css" href="styles/css/ngDialog.css">
+        <link rel="stylesheet" type="text/css" href="styles/css/ngDialog-theme-plain.css">
         <link rel="stylesheet" href="styles/css/master/global.css" media="screen">
 
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyBll4kPCZuJIaBsvCv_gHCRTzk5-e-8WjM"></script>
@@ -15,6 +18,7 @@
         <script type="text/javascript" src="app/directives/list-cities/list-cities.js"></script>
         <script type="text/javascript" src="app/directives/list-places/list-places.js"></script>
         <script type="text/javascript" src="javascripts/ngAutocomplete.js"></script>
+        <script type="text/javascript" src="javascripts/ngDialog.js"></script>
         <script type="text/javascript" src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
     </head>
     <body>
