--- a/public/styles/css/master/global.css
+++ b/public/styles/css/master/global.css
@@ -374,7 +374,7 @@ a {
   font-style: normal;
 }
 
-.i-navigation-section .i-nav-wrapper > ul li a, .i-navigation-section .i-nav-wrapper > ul li ul li a, .full-screen-block h1, .full-screen-block h4, .full-screen-block .form-group .form-input input, .login-section-wrapper .screen-logo-section p, .login-section-wrapper .login-title {
+.i-navigation-section .i-nav-wrapper > ul li a, .i-navigation-section .i-nav-wrapper > ul li ul li a, .listPlaces .main-container-section .main-container-header p, .full-screen-block h1, .full-screen-block h4, .full-screen-block .form-group .form-input input, .login-section-wrapper .screen-logo-section p, .login-section-wrapper .login-title {
   font-family: "Ubuntu";
   font-weight: 300;
   font-style: normal;
@@ -392,7 +392,7 @@ a {
   font-style: normal;
 }
 
-body, .i-navigation-section .i-nav-wrapper > ul li a, .list-places-wrapper .list-places-block .individual-place-block .place-image-block span, .explore-places-block h4, .explore-places-block p, .explore-places-block figcaption p {
+body, .i-navigation-section .i-nav-wrapper > ul li a, .listPlaces .main-container-section .main-container-header h6, .list-places-wrapper .list-places-block .individual-place-block .place-image-block span, .explore-places-block h4, .explore-places-block p, .explore-places-block figcaption p {
   font-family: "Ubuntu";
   font-weight: 400;
   font-style: normal;
@@ -410,7 +410,7 @@ body, .i-navigation-section .i-nav-wrapper > ul li a, .list-places-wrapper .list
   font-style: normal;
 }
 
-.btn, .i-navigation-section .i-nav-wrapper > ul > li:last-child a, .full-screen-block .form-group .form-button button {
+.btn, .i-navigation-section .i-nav-wrapper > ul > li:last-child a, .full-screen-block .form-group .form-button button, .listPlaces .main-container-section .main-container-header h1 {
   font-family: "Ubuntu";
   font-weight: 500;
   font-style: normal;
@@ -446,7 +446,7 @@ body, .i-navigation-section .i-nav-wrapper > ul li a, .list-places-wrapper .list
   font-style: normal;
 }
 
-.list-places-wrapper .list-places-block .individual-place-block h4, .filter-nav ul li p {
+.list-places-wrapper .list-places-block .individual-place-block h4, .filter-nav ul li a {
   font-family: "Ubuntu";
   font-weight: 700;
   font-style: normal;
@@ -1896,6 +1896,11 @@ nav {
   padding: 35px 50px;
 }
 
+.nav-wrapper.left-small {
+  padding: 30px 25px;
+  position: absolute;
+}
+
 /* ======== HOME PAGE ========= */
 .homePage {
   border: 15px solid #fff;
@@ -1907,6 +1912,73 @@ nav {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   height: 75vh;
+}
+
+.listPlaces .filter-sidebar-section {
+  width: -webkit-calc(16.66667%);
+  width: -moz-calc(16.66667%);
+  width: calc(16.66667%);
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 0%;
+  margin-right: 0%;
+  float: left;
+  height: 100vh;
+  position: fixed;
+}
+
+.listPlaces .main-container-section {
+  width: -webkit-calc(66.66667%);
+  width: -moz-calc(66.66667%);
+  width: calc(66.66667%);
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 16.66667%;
+  margin-right: 0%;
+}
+
+.listPlaces .main-container-section .main-container-header {
+  margin-top: 60px;
+  text-align: center;
+}
+
+.listPlaces .main-container-section .main-container-header h6 {
+  font-size: 136px;
+  color: #f6f6f6;
+  line-height: 80px;
+  letter-spacing: initial;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+}
+
+.listPlaces .main-container-section .main-container-header h1 {
+  font-size: 76px;
+  color: #010101;
+  line-height: 34px;
+  letter-spacing: initial;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+}
+
+.listPlaces .main-container-section .main-container-header p {
+  font-size: 16px;
+  color: #777777;
+  line-height: initial;
+  letter-spacing: initial;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.listPlaces .main-container-section .main-container-header a {
+  color: #777777;
 }
 
 .listPlaces .full-screen-section {
@@ -2011,6 +2083,7 @@ nav {
   background-color: #ffffff;
   position: relative;
   z-index: 100;
+  margin-top: 40px;
 }
 
 .list-places-wrapper .masonry {
@@ -2035,7 +2108,7 @@ nav {
 }
 
 .list-places-wrapper .list-places-block .individual-place-block .individual-place-block-wrapper {
-  background-color: #f5f5f5;
+  background-color: #fff;
   box-shadow: 3px 3px 3px rgba(204, 204, 204, 0.1);
   border: 1px solid #f3f3f3;
 }
@@ -2101,7 +2174,7 @@ nav {
   letter-spacing: initial;
   display: block;
   padding: 12px 10px;
-  background-color: #e74949;
+  background-color: #272727;
   color: #fff;
   width: 100%;
   text-align: center;
@@ -2110,12 +2183,16 @@ nav {
   font-family: "Montserrat";
 }
 
+.list-places-wrapper .list-places-block .individual-place-block .place-content-block a:hover {
+  background-color: #E74949;
+}
+
 .list-places-wrapper .list-places-block .individual-place-block h4 {
   padding-top: 25px;
   font-size: 20px;
-  color: #515151;
+  color: #3a3a3a;
   line-height: initial;
-  letter-spacing: initial;
+  letter-spacing: 1px;
   margin-bottom: 0px;
   margin-top: 0px;
   padding-left: 8px;
@@ -2123,7 +2200,6 @@ nav {
   min-height: 27px;
   text-align: center;
   text-transform: uppercase;
-  font-family: "Montserrat";
 }
 
 .list-places-wrapper .list-places-block .individual-place-block p {
@@ -2146,45 +2222,57 @@ nav {
 
 .filter-nav {
   padding: 10px 0px;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
-  border-top: 1px solid #f1f1f1;
+  padding-left: 25px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .filter-nav ul {
   display: table;
-  max-width: 1366px;
   width: 100%;
   margin: 0 auto;
 }
 
 .filter-nav ul li {
-  width: -webkit-calc(12.5%);
-  width: -moz-calc(12.5%);
-  width: calc(12.5%);
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-left: 0%;
-  margin-right: 0%;
-  text-align: center;
+  padding-top: 8px;
+  padding-left: 0;
+  padding-bottom: 8px;
+  padding-right: 0;
 }
 
-.filter-nav ul li img {
-  display: block;
-  margin: 0 auto;
-  max-width: 35px;
-  opacity: 0.7;
-}
-
-.filter-nav ul li p {
-  font-size: 14px;
-  color: #343638;
+.filter-nav ul li a {
+  font-size: 18px;
+  color: #808182;
   line-height: initial;
   letter-spacing: 1px;
   margin-bottom: 0px;
   margin-top: 0px;
   text-transform: uppercase;
-  padding-top: 8px;
+}
+
+.filter-nav ul li a:hover {
+  color: #343638;
+}
+
+.filter-nav a.save-trip {
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-top: 36px;
+  display: block;
+  cursor: pointer;
+}
+
+.filter-nav a.save-trip i {
+  float: left;
+  font-size: 30px;
+  margin-top: -6px;
+  padding-right: 8px;
+}
+
+.filter-nav a.save-trip:hover {
+  color: #E74949;
 }
 
 .explore-places-block {
